SONAR-6868 Fix HTML report when rule message is too long

--- a/sonar-scanner-engine/src/main/resources/org/sonar/batch/scan/report/issuesreport_files/sonar.css
+++ b/sonar-scanner-engine/src/main/resources/org/sonar/batch/scan/report/issuesreport_files/sonar.css
@@ -215,7 +215,6 @@ div.issue {
 div.vtitle {
   background-color: #E4ECF3;
   line-height: 2.2em;
-  height: 2.2em;
   margin: 0;
   padding: 0 0 0 10px;
   text-shadow: 0 1px 0 #FFF;
